loxrs_interpreter/src/lox/interpreter/test/e2e/fail/syntax_err.lox
print true;
print 2 + 1;

print "one;

var a = "global a";
print a;

